--- a/Assignment_2/nbproject/project.properties
+++ b/Assignment_2/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Assignment_2
-main.class=assignment_2.Assignment_2
+main.class=ui.MainJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
